--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,12 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.9.4</version>
 		</dependency>
+		<!-- Gson 라이브러리 의존성 추가 -->
+	    <dependency>
+	        <groupId>com.google.code.gson</groupId>
+	        <artifactId>gson</artifactId>
+	        <version>2.10.1</version> <!-- 최신 버전으로 설정 -->
+	    </dependency>
 				
 	</dependencies>
     <build>
